# embeddingviz

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  requirements.txt
embeddingviz/: app.py  offline.py  processor.py
embeddingviz/datasets/: __init__.py  mtg_jamendo.py
embeddingviz/models/: __init__.py  clap.py
